# blunder

./: .gitignore  CMakeLists.txt  README.md
docs/: development.md
include/glad/: glad.h
src/: main  main.cpp
src/core/: Application.cpp  Application.hpp  Component.hpp  InputComponent.cpp  InputComponent.hpp  RenderComponent.cpp  RenderComponent.hpp  Shader.cpp  Shader.hpp  State.hpp
src/platform/: glad.c
src/shaders/: atmosphere.frag  cloud.comp  fullscreen.vert  post.frag
